XO_Project_UAT/Project--XOGrp--UAT/src/objects/Compensation_Role__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compensation_Type__c</fullName>
        <label>Compensation Type</label>
        <picklist>
            <picklistValues>
                <fullName>NSBB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound Sales Execs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Sales Execs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Sales Execs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Compensation_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Compensation Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Role__c</columns>
        <columns>Compensation_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CompRole-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Compensation Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Start_Date_And_End_Date</fullName>
        <active>true</active>
        <description>CSP-2925 Compensation Roles - Set up Custom Object</description>
        <errorConditionFormula>OR(
 Start_Date__c &lt; DATE(2018,1,1), 
 End_Date__c &lt; DATE(2018,1,1),
 Start_Date__c &gt; End_Date__c
)</errorConditionFormula>
        <errorMessage>Please fill valid Start Date or End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Sales_Rep_Require</fullName>
        <active>true</active>
        <description>CSP-2925 Compensation Roles - Set up Custom Object</description>
        <errorConditionFormula>ISBLANK(Sales_Rep__c)</errorConditionFormula>
        <errorMessage>Sales Rep is Required</errorMessage>
    </validationRules>
</CustomObject>